# SecGNN

./: CMakeLists.txt  README.md  main.cpp  mpcUtil.cpp  mpcUtil.h  test.cpp  test.h  typedef.h  util.cpp  util.h
citeseer/: NeibNumParty1.txt  NeibNumParty2.txt  citesParty1.txt  citesParty2.txt  edgeWeightParty1.txt  edgeWeightParty2.txt  plainCities.txt
cora/: NeibNumParty1.txt  NeibNumParty2.txt  citesParty1.txt  citesParty2.txt  edgeWeightParty1.txt  edgeWeightParty2.txt  modelParty1.txt  modelParty2.txt  plainCities.txt  triplesBoolParty1.txt  triplesBoolParty2.txt  triplesParty1.txt  triplesParty2.txt
pubmed/: NeibNumParty1.txt  NeibNumParty2.txt  modelParty1.txt  modelParty2.txt  plainCities.txt
